<resources>
    <string name="app_name">test_task</string>
    <string name="title_home">Home</string>
    <string name="title_details">Details</string>
    <string name="title_notifications">Notifications</string>
    <string name="ecommerce_concept">Ecommerce Concept</string>
    <string name="explorer">Explorer</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="phones">Phones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>