<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_explorer">

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.ironmeddie.test_task.presentation.ui.cart.CartFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.ironmeddie.test_task.presentation.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ironmeddie.test_task.presentation.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_explorer"
        android:name="com.ironmeddie.test_task.presentation.ui.Explorer.ExplorerFragment"
        android:label="fragment_explorer"
        tools:layout="@layout/fragment_explorer" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.ironmeddie.test_task.presentation.ui.favorite.FavoriteFragment"
        android:label="fragment_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>